fixed the alignment and sizes of major elements

--- a/css/index.css
+++ b/css/index.css
@@ -125,11 +125,14 @@ a:hover {
 } */
 
 /*-------------------------HELLO------------------*/
+#hello {
+  padding-top: 5em;
+}
+
 .intro {
   display: grid;
   grid-gap: 1rem;
   grid-template-columns: 40% auto;
-  padding-top: 5em;
   /* height: ; */
 }
 
@@ -195,9 +198,12 @@ a:hover {
 }
 
 /*-----------------------ABOUT------------------*/
+#about {
+  padding-top: 10em;
+}
+
 .about {
   display: grid;
-  padding-top: 10em;
   grid-template-columns: 30% 70%;
 }
 
@@ -239,9 +245,8 @@ a:hover {
 }
 
 /*------------------PROJECTS--------------------*/
-
-.projects {
-  height: 2000px;
+#projects {
+  padding-top: 5em;
 }
 
 .projects > #projectstitle {
@@ -349,7 +354,6 @@ a:hover {
 
 #contact {
   position: relative;
-  top: 120em;
   bottom: 0em;
   left: 0em;
   height: 75px;
@@ -358,7 +362,8 @@ a:hover {
   font-size: 20px;
   background-color: #ff5851;
   color: white;
-  padding: 0.5em;
+  padding: 1em 0;
+  margin-top: 3em;
 }
 
 #contact > #contactcontainer {
